revereor/theme/light.css
/* ... */
	a.forumtitle, a.topictitle, a.lastsubject, .username, .username-coloured, .postlink {
		font-weight: 600;
	}
	.postlink {
		border: none;
	}

#memberlist tr.inactive, #team tr.inactive {
	font-style: unset;
}

.topiclist dl.row-item dt, .topiclist dl.row-item dd {
	min-height: 48px;
}
.forumbg .header a, .forabg .header a, th a,
li.header dl.row-item dt, li.header dl.row-item dd {
	color: var(--button-text) !important;
}

li.header dt, li.header dd {
	color: var(--text);
}

.topiclist dl.row-item {
	background-blend-mode: multiply;
	background-color: inherit;
}

p {
	margin-bottom: 1em;
}

select {
	background: var(--control-bg);
	min-height: 1.75em;
}

select, .cplist {
	border: none !important;
	border-radius: 4px;
	box-shadow: 0 0 0 1px var(--shadow) !important;
}

hr {
	display: none;
}
	.postbody hr {
		display: block;
		border-color: var(--border);
	}

li.row {
	border-top-color: transparent !important;
	border-bottom-color: var(--border) !important;
}
	li.row:hover, table.table1 tbody tr:hover, table.table1 tbody tr.hover,
	table.zebra-list tr:nth-child(2n) td, ul.zebra-list li:nth-child(2n) {
		background: var(--control-bg-light);
	}
	table.zebra-list tr:nth-child(2n+1) td, ul.zebra-list li:nth-child(2n+1) {
		background: var(--control-bg);
	}
	li.row strong {
		color: unset;
	}
	ul.topiclist dd, li.row:hover dd {
		border-left-color: transparent;
	}
	ul.topiclist li, .panel-container .panel li.header dd, .panel-container .panel li.header dt {
		color: var(--text-dim) !important;
	}

.button,
a.button1, input.button1, input.button3, a.button2, input.button2,
a.button1:hover, input.button1:hover, a.button2:hover, input.button2:hover, input.button3:hover {
	background: var(--secondary);
	color: var(--button-text);
	border-color: var(--secondary);
}

.button {
	font-size: 14px;
}
	.button .icon {
		color: var(--button-text);
		border-color: var(--secondary);
	}
	.button:hover, .button:hover .icon,
	.button:focus, .button:focus .icon {
		color: var(--button-text);
		border-color: var(--secondary-hv);
	}
		.button:hover, .button:focus {
			background: var(--secondary-hv);
		}
	.button.button-icon-only, .button.button-icon-only .icon {
		background: none !important;
		color: var(--primary);
		border: none;
	}
		.button.button-icon-only:hover .icon {
			color: var(--primary-hv);
		}
	.responsive-tab .responsive-tab-link:before,
	.responsive-tab:hover .responsive-tab-link:before,
	.responsive-tab:focus .responsive-tab-link:before {
		border-color: var(--control-bg-bright);
	}
		.responsive-tab > a.responsive-tab-link {
			line-height: unset;
		}
	input.button1, input.button2, input.button3 {
		padding: 3px 8px 4px 8px;
		border-radius: 4px;
	}
		input.button1:hover, input.button2:hover, input.button3:hover,
		input.button1:focus, input.button2:focus, input.button3:focus {
			background: var(--secondary-hv);
			color: var(--button-text);
			border-color: var(--secondary-hv);
		}

p.author {
	margin-bottom: 16px;
}

p.post-notice {
	padding: 8px;
	border-radius: 8px;
}

.caret {
	border-color: #fff5;
}

.icon.icon-md {
	font-size: 11px;
}

h3, table.table1 tbody tr, table.table1 tbody td,
.dropdown li, .dropdown li.separator, .dropdown-extended ul li, .dropdown-extended .header, .dropdown-extended .footer,
.codebox p, .notice, .signature, .attach-image img {
	background-image: none;
	border-color: var(--border);
}
	.dropdown-extended .header {
		border-bottom-style: dotted;
	}
	.dropdown-extended .footer {
		border-top-style: dotted;
	}

.tabs .tab > a {
	background: var(--secondary);
	color: var(--link-text);
	border-color: var(--secondary);
}
	.tabs .tab > a:hover {
		background: var(--secondary-hv);
		color: var(--link-text);
		border-color: var(--secondary-hv);
	}
	.tabs .activetab > a {
		background: var(--primary);
		color: var(--link-text);
		border-color: var(--primary);
		box-shadow: none;
	}
		.tabs .activetab > a:hover {
			background: var(--primary);
			color: var(--link-text);
			border-color: var(--primary);
			box-shadow: none;
		}

.postprofile {
	margin: 0;
	float: left;
}
	.postprofile dd, .postprofile dt {
		margin: 0;
	}
	.postprofile .username, .postprofile .username-coloured {
		font-size: 1.2em;
	}

img.avatar, .postprofile .avatar img, .postbody img.postimage, .postbody video {
	max-width: 100%;
	max-height: 100vh;
	border: 1px solid var(--control-bg-dark);
	border-radius: 4px;
}
	.postprofile .avatar img {
		border: none;
	}
	.postbody img[src*="/images/uploads/"], .postbody video {
		margin: 8px 0;
	}
	img[src^="./images/ranks"] {
		max-height: 25px;
	}

.online {
	background-image: url("./images/icon_user_online.gif");
}

.content h2, .panel h2 {
	color: var(--primary);
	border: none;
}

.content ul, .content ol {
	margin: 1em;
}
	.content ::marker {
		color: var(--secondary);
	}

.postbody h3.first, .arrow-left, .arrow-right {
	line-height: 110%;
}

.postbody table {
	max-width: 100%;
	margin: 16px 1px;
}
	.postbody table tr:nth-child(odd) td {
		background: var(--control-bg-dark);
	}
		.postbody table tr:first-of-type > td:first-of-type, .postbody table tr:first-of-type > th:first-of-type {
			border-top-left-radius: 8px;
		}
		.postbody table tr:first-of-type > td:last-of-type, .postbody table tr:first-of-type > th:last-of-type {
			border-top-right-radius: 8px;
		}
		.postbody table tr:last-of-type > td:first-of-type {
			border-bottom-left-radius: 8px;
		}
		.postbody table tr:last-of-type > td:last-of-type {
			border-bottom-right-radius: 8px;
		}
	.postbody table th {
		padding: 4px 16px;
		background: var(--bg);
	}
	.postbody table td {
		padding: 8px 16px;
	}

.postbody .author, .postbody .responsive-hide, .signature,
.icon.icon-lightgray, a:hover .icon.icon-lightgray {
	color: var(--text-dim);
}

.postbody .inline-attachment {
	margin: 16px 0;
	font-size: .85em;
}

.signature {
	margin-top: 16px;
}

#qr_postform h2 {
	margin: 0;
}
#qr_postform .message-box {
	width: 100%;
}

.topicreview {
	padding-left: 1px;
	margin-left: -1px;
}
/* ... */

